--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^2.3.0",
+    "colors": "^1.1.2",
     "console.table": "^0.9.1",
     "inquirer": "^5.0.0",
     "mysql": "^2.15.0"
