--- a/package.json
+++ b/package.json
@@ -11,8 +11,17 @@
   "dependencies": {
     "chalk": "^2.3.0",
     "colors": "^1.1.2",
-    "console.table": "^0.9.1",
+    "console.table": "^0.10.0",
     "inquirer": "^5.0.0",
     "mysql": "^2.15.0"
+  },
+  "devDependencies": {
+    "eslint": "^5.4.0",
+    "eslint-config-google": "^0.9.1",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-node": "^7.0.1",
+    "eslint-plugin-promise": "^4.0.0",
+    "eslint-plugin-standard": "^4.0.0"
   }
 }
