--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Bamazon Dependecies",
   "main": "app.js",
   "scripts": {
+    "lint": "eslint **/*.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Mark Powalisz",
